Fix misaligned required field note on some pages

--- a/css/custom.less
+++ b/css/custom.less
@@ -51,13 +51,15 @@
     padding: 1em;
     background-color: whitesmoke;
   }
-  /* Position required field note more visibly */
+  /* Position required field note for more visibly */
   div.req {
     position: relative !important;
     width: auto !important;
     text-align: left !important;
     margin-bottom: 1em;
     font-size: 100% !important;
+    top: 0 !important;
+    right: 0 !important;
   }
   /* Fine print styling*/
   .fine-print {
